tempfile/derive_more/tests/compile_fail/as_mut/multiple_field_attrs.rs
#[derive(derive_more::AsMut)]
struct Foo {
    #[as_mut]
    #[as_mut(forward)]
    bar: i32,
}

fn main() {}
